package com.perfectappstudio.scientificcalc.core.data

enum class UnitCategory(val displayName: String) {
    LENGTH("Length"),
    WEIGHT("Weight"),
    TEMPERATURE("Temperature"),
    VOLUME("Volume"),
    AREA("Area"),
    SPEED("Speed"),
    TIME("Time"),
    DATA_STORAGE("Data"),
...
